--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
   </script>-->
 
   <link href="build/main.css" rel="stylesheet">
-  <link rel="stylesheet" href="assets/css/swiper.min.css">
+  <link rel="stylesheet" href="assets/css/swiper-3.4.2.min.css">
 
 </head>
 <body>
@@ -36,8 +36,8 @@
   <!-- Ionic's root component and where the app will load -->
   <ion-app></ion-app>
 
-  <script src="assets/js/swiper.min.js"></script>
-  <script src="assets/js/swiper.jquery.min.js"></script>
+  <script src="assets/js/swiper-3.4.2.min.js"></script>
+  <script src="assets/js/swiper-3.4.2.jquery.min.js"></script>
   <script src="assets/js/zepto.js"></script>
 
   <!-- The polyfills js is generated during the build process -->
