--- a/src/pages/comment-detail/comment-detail.html
+++ b/src/pages/comment-detail/comment-detail.html
@@ -4,74 +4,59 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
-
+<ion-header class="comment-detail-header">
   <ion-navbar>
-    <ion-title>cherilxf的影评</ion-title>
+    <ion-title>{{comment_data?.author?.name}}</ion-title>
   </ion-navbar>
-
 </ion-header>
 
-
-<ion-content class="commentDetail-content">
+<ion-content class="comment-detail-content">
   <div class="comment-own">
-    <ion-item class="comment-top">
+    <ion-item class="comment-own-top">
       <div item-start>
-        <img src="assets/imgs/MEAN.jpg">
+        <img src="{{comment_data?.author?.avatar}}">
       </div>
-      <p>cherilxf</p>
+      <p class="comment-own-nickname">{{comment_data?.author?.name}}</p>
     </ion-item>
-    <p class="comment-content">
-      艾迪（汤姆·哈迪 Tom Hardy 饰）是一位深受观众喜爱的新闻记者，和女友安妮（米歇尔·威廉姆斯 Michelle Williams
-      饰）相恋多年，彼此之间感情十分要好。安妮是一名律师，接手了生命基金会的案件，在女友的邮箱里，艾迪发现了基金会老板德雷克（里兹·阿迈德 Riz Ahmed
-      饰）不为人知的秘密。为此，艾迪不仅丢了工作，女友也离他而去。饰）不为人知的秘密。为此，艾迪不仅丢了工作，女友也离他而去。
-    </p>
-    <div class="comment-bottom">
+    <p class="comment-own-content">{{comment_data?.content}}</p>
+    <div class="comment-own-bottom">
       <ion-item>
-        <div item-left class="comment-time">
-          12-04 21:18
-        </div>
+        <div item-left class="film-comment-time">{{comment_data?.created_at}}</div>
         <div item-right>
-          <ion-icon name="dianzan" class="dianzan" (click)="dianzanDo(1)">14</ion-icon>
+          <ion-icon class="dianzan" name="dianzan" (click)="dianzanDo(1)">{{comment_data?.useful_count}}</ion-icon>
         </div>
       </ion-item>
     </div>
   </div>
-  <div class="comment-num">
-    <p>
-      1条评论
-    </p>
-  </div>
-  <ion-list>
-    <div class="comment-other">
-      <ion-item class="comment-top">
-        <div item-start>
-          <img src="assets/imgs/MEAN.jpg">
-        </div>
-        <p>demo***005</p>
-      </ion-item>
-      <p class="comment-content">
-        艾迪（汤姆·哈迪 Tom Hardy 饰）是一位深受观众喜爱的新闻记者，和女友安妮（米歇尔·威廉姆斯 Michelle Williams
-      </p>
-      <div class="comment-bottom">
-        <ion-item>
-          <div item-left class="comment-time">
-            12-04 21:18
+  <p class="comment-reply-count">共有&nbsp;<span>1</span>&nbsp;条评论回复</p>
+  <div class="comment-reply">
+    <ion-list>
+      <div class="comment-reply-item" *ngFor="let item of reply_data">
+        <ion-item class="comment-reply-top">
+          <div item-start>
+            <img src="{{item.head_sculpture}}">
           </div>
-          <div item-right>
-            <ion-icon name="dianzan" class="dianzan">14</ion-icon>
-          </div>
+          <p class="comment-reply-nickname">{{item.nickname}}</p>
         </ion-item>
+        <p class="comment-reply-content">{{item.content}}</p>
+        <div class="comment-reply-bottom">
+          <ion-item>
+            <div item-left class="film-comment-time">{{item.create_time}}</div>
+            <div item-right>
+              <ion-icon class="dianzan" name="dianzan">{{item.zan_count}}</ion-icon>
+            </div>
+          </ion-item>
+        </div>
       </div>
-    </div>
-  </ion-list>
+    </ion-list>
+  </div>
 </ion-content>
 
-<ion-footer class="commentDetail-bottom">
+<ion-footer class="comment-detail-bottom">
   <ion-item>
-    <div class="input-box">
-      <input type="text" ion-text item-left>
+    <div class="reply-content-box">
+      <input class="reply-text" type="text" ion-text item-left placeholder="请输入回复内容">
     </div>
-    <button item-right ion-button>发送</button>
+    <button class="reply-btn" item-right ion-button (click)="replyComment()">发送</button>
   </ion-item>
 </ion-footer>
