--- a/src/pages/go-login/login/login.html
+++ b/src/pages/go-login/login/login.html
@@ -4,32 +4,34 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<ion-header class="login-header">
+  <button class="goback" (click)="goBack();">
+    <ion-icon name="goback"></ion-icon>
+  </button>
 
   <ion-navbar>
     <ion-title>账号登录</ion-title>
   </ion-navbar>
 
 </ion-header>
-
 <ion-content class="login-content">
   <ion-list>
     <ion-item>
       <ion-label>
         <ion-icon name="accoundIcon"></ion-icon>
       </ion-label>
-      <ion-input type="text" placeholder="账号/手机号码/邮箱"></ion-input>
+      <ion-input type="text" maxlength="16" placeholder="账号/手机号码/邮箱" #accound></ion-input>
     </ion-item>
     <ion-item>
       <ion-label>
         <ion-icon name="passwordIcon"></ion-icon>
       </ion-label>
-      <ion-input type="password" max="16" placeholder="请输入密码"></ion-input>
+      <ion-input type="password" minlength="6" maxlength="16" placeholder="请输入密码" #password></ion-input>
       <ion-icon item-right name="pwSeeIcon"></ion-icon>
     </ion-item>
   </ion-list>
   <div class="login-box">
-    <button class="loginBtn" ion-button [block]="true">登录</button>
+    <button class="loginBtn" ion-button [block]="true" (click)="logIn(accound,password)" >登录</button>
     <button class="forgot-password floatRight">忘记密码</button>
   </div>
   <div class="register-box">
