--- a/src/pages/personal-center/movie-ticket/movie-ticket.html
+++ b/src/pages/personal-center/movie-ticket/movie-ticket.html
@@ -15,16 +15,16 @@
 
 <ion-content class="ticket-content">
   <ion-list class="ticket-list">
-    <ion-item>
+    <ion-item *ngFor="let ticketItem of ticket_data">
       <p item-left class="seat">座</p>
 
       <h2>
-        <span class="ticket-title">碟中谍6：全面瓦解</span>
-        <span class="ticket-number">2</span>张
+        <span class="ticket-title">{{ticketItem.movie_title}}</span>
+        <span class="ticket-number">{{ticketItem.ticket_number}}</span>张
       </h2>
-      <p>2018-09-15 20:40</p>
-      <p>金逸海珠成IMAX店</p>
-      <p item-right class="ticket-state">已放映</p>
+      <p>{{ticketItem.movie_time}}</p>
+      <p>{{ticketItem.cinema}}</p>
+      <p item-right class="ticket-state">{{ticketItem.state == 0 ? "未观看" : "已观看"}}</p>
     </ion-item>
   </ion-list>
 </ion-content>
