--- a/src/pages/personal-center/personal-center.html
+++ b/src/pages/personal-center/personal-center.html
@@ -12,11 +12,9 @@
     </ion-item>
     <ion-item (click)="goInfoSetting()">
       <ion-thumbnail item-start>
-        <img src="assets/imgs/MEAN.jpg">
+        <img src="{{has_login ? user_data.user_head_sculpture : 'assets/imgs/MEAN.jpg'}}">
       </ion-thumbnail>
-      <h2>
-        cherilxf
-      </h2>
+      <h2>{{has_login ? user_data.user_nickname : "未登录"}}</h2>
       <ion-icon item-end name="youjiantouWhite"></ion-icon>
     </ion-item>
   </ion-list>
@@ -38,7 +36,8 @@
       </ion-col>
       <ion-col col-3>
         <ion-icon name="followIcon"></ion-icon>
-        <p>关注<p>
+        <p>关注
+        <p>
       </ion-col>
       <ion-col col-3>
         <ion-icon name="fansIcon"></ion-icon>
@@ -91,3 +90,4 @@
     </ion-item>
   </ion-list>
 </ion-content>
+
