--- a/src/pages/personal-center/personal-info-setting/nameSetting.html
+++ b/src/pages/personal-center/personal-info-setting/nameSetting.html
@@ -1,9 +1,9 @@
 <ion-header class="infoSetting-header">
   <ion-navbar>
     <ion-title text-center>昵称</ion-title>
-    <a href="#" class="saveInfo">保存</a>
+    <a href="javascript:;" class="saveInfo" (click)="saveName(username);">保存</a>
   </ion-navbar>
 </ion-header>
 <ion-content class="nameSetting-content">
-  <ion-input type="text" autocorrect value="cherilxf"></ion-input>
+  <ion-input type="text" placeholder="" autocorrect value="cherilxf" #username></ion-input>
 </ion-content>
